# Conway_Sequence

./: .gitignore  Cargo.toml  README.md
data/: atomic_elements.csv
src/: lib.rs  main.rs
src/generators/: naive.rs  smart.rs
src/lookups/: element_decay.rs  elements.rs  sequence_element.rs
src/utils/: sequence.rs  split.rs  sub_sequence.rs
