[package]
name = "conway_sequence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
clap = { version = "4.3.19", features = ["derive"] }
test-case = { version = "3.1.0" }
